# src/validation/wrapper-tokens.schema.ts
@@ -1,0 +1,19 @@
+import { z } from 'zod';
+
+import { address } from './parsers.js';
+
+export const ResolveWrapperTokenQuerySchema = z
+  .object({
+    chainId: z.string().transform((val) => parseInt(val)),
+  })
+  .strict();
+
+export type ResolveWrapperTokenQuery = z.infer<typeof ResolveWrapperTokenQuerySchema>;
+
+export const ResolveWrapperTokenPathSchema = z
+  .object({
+    wrapperTokenAddress: address,
+  })
+  .strict();
+
+export type ResolveWrapperTokenPath = z.infer<typeof ResolveWrapperTokenPathSchema>;
